--- a/templates/new_template/index.html
+++ b/templates/new_template/index.html
@@ -219,6 +219,40 @@ Inicio
         width: 145px;
         margin: 10px;
     }
+
+    .circle{
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+    }
+    .circle svg{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .warning{
+        background-color: #FFEEB2;
+    }
+</style>
+<style>
+    .filename{
+        width: 100%;
+        background: transparent;
+        border:#004949;
+        color: white;
+        font-size: 18px;
+    }
+    .filename:focus-visible{
+        outline: none;
+        border-bottom: double 3px #17af7767;
+    }
+    .focus{
+        border: 1px solid #00CF83;
+    }
 </style>
 {% endblock style %}
 {% block content %}
@@ -241,10 +275,10 @@ Inicio
             <p class="audio-name">{{audio.name.replace("_"," ")}}</p>
             <p class="audio-date">{{audio.date}}</p>
         </a>
-        <a href="#" class="ico-link">
-            <img src="/static/images/edit.svg" alt="editar">
+        <a href="#" class="ico-link" onclick="edit_audio_name(this)" data-name="{{audio.name}}" data-index="{{loop.index}}" >
+            <img src="/static/images/edit.svg" alt="editar" >
         </a>
-        <a href="#" class="ico-link" onclick="del_file(`{{audio.name}}`, `{{loop.index}}`)">
+        <a href="#" class="ico-link" onclick="confirm_delete(`{{audio.name}}`, `{{loop.index}}`)">
             <img src="/static/images/delete.svg" alt="eliminar">
         </a>
     </div>
@@ -287,6 +321,22 @@ Inicio
     <button type="button" class="btn" onclick="show_dropzone()" id="btn-repeat" hidden>Subir otro</button>
     <button type="button" class="btn success disabled" id="btn-go-audio">Ir al audio</button>
 </dialog>
+<dialog id="dialog-delete">
+    <span class="circle warning">
+        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <mask id="mask0_251_1719" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
+            <rect width="32" height="32" fill="#D9D9D9"/>
+            </mask>
+            <g mask="url(#mask0_251_1719)">
+            <path d="M16 29.3666C15.6444 29.3666 15.3055 29.3 14.9833 29.1666C14.6611 29.0333 14.3666 28.8444 14.1 28.6L3.39997 17.9C3.15552 17.6333 2.96663 17.3389 2.8333 17.0166C2.69997 16.6944 2.6333 16.3555 2.6333 16C2.6333 15.6444 2.69997 15.3 2.8333 14.9666C2.96663 14.6333 3.15552 14.3444 3.39997 14.1L14.1 3.39997C14.3666 3.1333 14.6611 2.93886 14.9833 2.81663C15.3055 2.69441 15.6444 2.6333 16 2.6333C16.3555 2.6333 16.7 2.69441 17.0333 2.81663C17.3666 2.93886 17.6555 3.1333 17.9 3.39997L28.6 14.1C28.8666 14.3444 29.0611 14.6333 29.1833 14.9666C29.3055 15.3 29.3666 15.6444 29.3666 16C29.3666 16.3555 29.3055 16.6944 29.1833 17.0166C29.0611 17.3389 28.8666 17.6333 28.6 17.9L17.9 28.6C17.6555 28.8444 17.3666 29.0333 17.0333 29.1666C16.7 29.3 16.3555 29.3666 16 29.3666ZM16 26.7L26.7 16L16 5.29997L5.29997 16L16 26.7ZM14.6666 17.3333H17.3333V9.3333H14.6666V17.3333ZM16 21.3333C16.3777 21.3333 16.6944 21.2055 16.95 20.95C17.2055 20.6944 17.3333 20.3777 17.3333 20C17.3333 19.6222 17.2055 19.3055 16.95 19.05C16.6944 18.7944 16.3777 18.6666 16 18.6666C15.6222 18.6666 15.3055 18.7944 15.05 19.05C14.7944 19.3055 14.6666 19.6222 14.6666 20C14.6666 20.3777 14.7944 20.6944 15.05 20.95C15.3055 21.2055 15.6222 21.3333 16 21.3333Z" fill="#6B4426"/>
+            </g>
+        </svg> 
+    </span>
+    <h2>¿Deseas eliminar tu audio?</h2>
+    <p>Si lo haces, no podrás recuperar tu grabación</p>
+    <button class="btn" id="delete_btn">Sí, eliminar</button>
+    <button class="btn success" id="exit_delete_btn" >No, mantener audio</button>
+</dialog>
 {% endblock modal %}
 
 {% block script %}
@@ -304,14 +354,64 @@ Inicio
         dragCont2 = 0;
 
     const open_modal = () => dialog.showModal();
-    const close_modal = () => dialog.close()
+    const close_modal = () => dialog.close();
+    document.getElementById("exit_delete_btn").onclick = cancel_delete
+
+
+    function confirm_delete(audio, index){
+        document.getElementById("dialog-delete").showModal();
+        document.getElementById("delete_btn").onclick = () => del_file(audio, index);
+
+    }
+
+    function cancel_delete(){
+        document.getElementById("dialog-delete").close();
+    }
+
 
     function del_file(audio, index) {
+        cancel_delete();
         fetch(`/del_file?filename=${audio}`).then(data => data.json()).then(() => {
             document.getElementById('audio-' + index).remove()
         }).catch(() => {
             alert("No existe el archivo")
         })
+    }
+
+    /** @param {HTMLAnchorElement} hyperlink */
+    function edit_audio_name(hyperlink){
+        const edit_img =  hyperlink.firstElementChild;
+        edit_img.src = "/static/images/save_bold.svg";
+        const del_hyper = hyperlink.nextElementSibling;
+        del_hyper.hidden = true;
+        hyperlink.onclick = () => save_audio_name(hyperlink);
+        const main_anchor = hyperlink.previousElementSibling;
+        main_anchor.firstElementChild.hidden = true;
+        main_anchor.href = "#"
+        const input = document.createElement("input");
+        input.type = "text";
+        input.classList.add("filename");
+        input.value = hyperlink.dataset.name;
+        main_anchor.insertAdjacentElement('afterbegin', input);
+        main_anchor.parentElement.classList.add("focus")
+        input.focus();
+    }
+
+
+    /** @param {HTMLAnchorElement} hyperlink */
+    function save_audio_name(hyperlink){
+        const main_anchor = hyperlink.previousElementSibling;
+        const value =  main_anchor.firstElementChild.value;
+        const edit_img =  hyperlink.firstElementChild;
+        edit_img.src = "/static/images/edit.svg";
+        const del_hyper = hyperlink.nextElementSibling;
+        del_hyper.hidden = false;
+        hyperlink.onclick = () => edit_audio_name(hyperlink);
+        main_anchor.firstElementChild.remove();
+        main_anchor.firstElementChild.innerText = value;
+        main_anchor.firstElementChild.hidden = false;
+        main_anchor.href = `/player/${value}`;
+        main_anchor.parentElement.classList.remove("focus")
     }
     
     
