--- a/templates/new_template/business.html
+++ b/templates/new_template/business.html
@@ -1,6 +1,6 @@
 {% extends "new_template/base.html" %}
 {% block title %}
-  Negocio
+  Softskill
 {% endblock title %}
 {% block style %}
     <style>
