--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -23,6 +23,10 @@
         #dialog-logout img{
             margin-top: 20px;
         }
+        .profile-icon img{
+            width: 20px;
+            height: 20pxs;
+        }
     </style>
     {% block style %}{% endblock style %}
 </head>
@@ -103,9 +107,8 @@
                         </g>
                     </svg>
                 </a>
-                <a href="/business" class="profile-icon" title="Negocios">
-                    <svg width="20" height="20" viewBox="0 0 1024 1024" class="icon"  version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M326.5625 301.0625l-1.21875-93.28125c-0.1875-14.25 11.34375-25.875 25.59375-25.875h322.125c14.15625 0 25.59375 11.4375 25.59375 25.59375v93.1875h-65.625v-53.15625H391.53125l0.65625 52.78125-65.625 0.75z" fill="#8E6620" /><path d="M404.09375 335.75h-91.59375c-1.59375 0-3-1.3125-3-3v-30.1875c0-1.59375 1.3125-3 3-3h91.59375c1.59375 0 3 1.3125 3 3v30.1875c0 1.6875-1.40625 3-3 3zM711.40625 335.75h-91.125c-1.78125 0-3.1875-1.40625-3.1875-3.1875V302.9375c0-1.78125 1.40625-3.1875 3.1875-3.1875h91.125c1.78125 0 3.1875 1.40625 3.1875 3.1875v29.625c0.09375 1.78125-1.40625 3.1875-3.1875 3.1875z" fill="#FFB000" /><path d="M862.90625 932.1875H162.96875c-38.71875 0-70.125-31.40625-70.125-70.125V402.3125c0-38.71875 31.40625-70.125 70.125-70.125h699.84375c38.71875 0 70.125 31.40625 70.125 70.125v459.75c0.09375 38.71875-31.3125 70.125-70.03125 70.125z" fill="#8E6620" /><path d="M234.575 332.298125l75-0.215625 1.726875 599.34375-75 0.215625zM714.670625 332.298125l75-0.215625 1.726875 599.34375-75 0.215625z" fill="#FFB000" /></svg>
-                </a>
+                <a href="/business" class="profile-icon" title="Softskill">
+                    <svg fill="#FFFF" width="27" height="28" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path d="M43.84,46.76a5.35,5.35,0,1,1,5.46-5.34A5.41,5.41,0,0,1,43.84,46.76Z" fill-rule="evenodd"/><path d="M77.33,55.7,70.06,44.9V44A24,24,0,0,0,46.19,20a22,22,0,0,0-5.67.7A23.89,23.89,0,0,0,22.31,44a21.92,21.92,0,0,0,3.58,12.7c4.18,6,7,10.8,5.27,17.3a4.58,4.58,0,0,0,.9,4.2A4.43,4.43,0,0,0,35.74,80h19.6A4.72,4.72,0,0,0,60,76.2a5,5,0,0,0,.2-1.2,2.37,2.37,0,0,1,2.39-2H64a4.72,4.72,0,0,0,4.68-3.4A41.31,41.31,0,0,0,70.16,60h5.17a2.78,2.78,0,0,0,2.19-1.6A2.86,2.86,0,0,0,77.33,55.7ZM57.49,47.33l-1,1.57a2.22,2.22,0,0,1-1.76.94,2.38,2.38,0,0,1-.72-.16l-2.65-1a11.64,11.64,0,0,1-3.85,2.2l-.48,2.91a2,2,0,0,1-2,1.65h-2a2,2,0,0,1-2-1.65l-.48-2.91a10,10,0,0,1-3.69-2l-2.81,1a2.38,2.38,0,0,1-.72.16,2.1,2.1,0,0,1-1.76-1l-1-1.65a1.94,1.94,0,0,1,.48-2.51l2.33-1.89a10.11,10.11,0,0,1-.24-2.12,9.41,9.41,0,0,1,.24-2L31.1,36.88a1.92,1.92,0,0,1-.48-2.51l1-1.65a2,2,0,0,1,1.76-1,2.38,2.38,0,0,1,.72.16l2.81,1a11.52,11.52,0,0,1,3.69-2.12L41,28a1.91,1.91,0,0,1,2-1.57h2a1.92,1.92,0,0,1,2,1.49l.48,2.83a11.31,11.31,0,0,1,3.69,2l2.81-1a2.38,2.38,0,0,1,.72-.16,2.1,2.1,0,0,1,1.76,1l1,1.65A2,2,0,0,1,57,36.8l-2.33,1.89a9.56,9.56,0,0,1,.24,2.12,9.41,9.41,0,0,1-.24,2L57,44.74A2,2,0,0,1,57.49,47.33Z" fill-rule="evenodd"/></svg>                </a>
                 <a href="/interview" class="profile-icon" title="Entrevista">
                     <svg width="25" height="25" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0_38_897" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="17">
