--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -1,6 +1,6 @@
 {% extends "new_template/base.html" %}
 {% block title %}
-  Crear Usuario
+  Chatear
 {% endblock title %}
 {% block style %}
     <style>
@@ -130,7 +130,7 @@
             color: #00FFA1;
         }
     </style>
-
+    
 {% endblock style %}
 {% block content %}
 <a href="/" class="back">
@@ -140,6 +140,7 @@
 <div class="card">
     <h1 class="title">Chat</h1>
     <div id="historyContent"></div>
+    
     <div class="card-footer" >
         <textarea id="questionGPT" ></textarea>
         <a class="send" href="javascript:void(0)" id="sendGPT" onclick="answerGPT()">
@@ -157,62 +158,18 @@
             </svg>
         </a>
     </div>
+    
 </div>
 {% endblock content %}
 {% block script %}
 <script src="/static/js/socket.io.js"></script>
 <script src="/static/js/socket.config.js"></script>
+<script src="/static/js/gptChat.js"></script>
 
 <script>
-    const historyContent = document.getElementById("historyContent");
-    /** @type {HTMLElement} */
-    let current_msg; 
-
-    function add_loader(){
-        const p = document.createElement("p");
-        p.id = "generando";;
-        p.textContent = "Generando...";
-        historyContent.appendChild(p);
-    }
-
-    function answerGPT(){
-        let msg = document.querySelector("textarea").value;
-        createMsg("1", msg);
-        scroll2Bottom();
-        current_msg = createMsg(2);
-        add_loader();
-        socket.emit("answer_interview", msg);
-        setTimeout(()=> textarea.value = "", 100);
-    }
-    
-    socket.on('chatResponse', msg => {
-        current_msg.innerText += msg;
-        scroll2Bottom();
-    })
-
     socket.on('chatEnd', () => {
         document.getElementById("generando").remove();
     })
-
-
-    function createMsg(msg_num, msg=""){
-        const div = document.createElement("div");
-        div.classList.add(`msg${msg_num}`);
-        const span = document.createElement("span");
-        span.classList.add("msg");
-        span.innerText = msg;
-        div.appendChild(span);
-        historyContent.appendChild(div);
-        return span
-    }
-
-
-    function scroll2Bottom(){
-        if(document.body.scrollTop !== document.body.scrollHeight){
-            document.body.scrollTop = document.body.scrollHeight
-        }
-    }
-
 </script>
 
 {% endblock script %}
