--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -51,6 +51,11 @@
             </div>
             <div class="profile-box">
                 <span>{{session['user']}}</span>
+                <a href="/burnout" title="Medidor de burnout">
+                    <svg fill="#FFFF" width="25" height="25" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M28.268 11.618c1.161 2.381 0.076 7.706-3.688 8.419 1.591-1.333 2.694-4.677 2.087-6.053-2.072 2.835-4.713 0.152-2.053-2.574 1.768-1.812 2.379-4.099 0.626-6.61 0.542 2.394-2.25 5.059-4.162 3.374-1.291-1.137-0.61-3.628 1.414-4.279-1.606-0.556-2.843 0.168-3.131 1.287-1.052-1.018-2.432-1.685-2.053-3.374l-0-0c-1.906 0.846-1.363 3.292-0.487 4.349 1.668 2.013-1.867 3.107-2.922-0.313-0.32 1.050-1.461 1.281-2.122 0.452-0.418-0.524-1.161-1.883-0.731-3.201-1.244 0.878-1.887 2.684-1.148 3.757 1.744 2.533-0.699 4.484-3.514 2.435 2.172 2.844 1.261 7.141-0.974 8.593 0.875-1.909 0.492-5.254-1.322-5.914 0.946 2.803-1.402 4.891-2.54 3.688v15.045h2.901c0.795-3.373 2.633-5.452 6.927-6.26-1.297-1.563-2.118-3.778-2.118-6.233 0-4.729 2.992-8.565 6.694-8.565s6.694 3.837 6.694 8.565c0 2.395-0.75 4.593-1.991 6.148 4.698 0.739 6.466 2.878 7.119 6.345h2.998v-13.688c-0.383-1.85-1.051-4.946-2.505-5.392zM5.058 7.486c-1.45-2.901 4.029-3.59 0.3-6.178-0.139 1.972-5.941 2.821-0.3 6.178z"></path>
+                    </svg>
+                </a>
                 <a href="/english" class="profile-icon" title="Aprende Inglés">
                     <svg height="20" width="25" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
                             viewBox="0 0 512 512" xml:space="preserve">
