--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -129,6 +129,10 @@
         .msg a{
             color: #00FFA1;
         }
+        html, body{
+            overflow: auto;
+            height: 100%;
+        }
     </style>
     
 {% endblock style %}
