--- a/templates/new_template/hutrit_interview.html
+++ b/templates/new_template/hutrit_interview.html
@@ -130,6 +130,10 @@
         .msg a{
             color: #00FFA1;
         }
+        html, body{
+            overflow: auto;
+            height: 100%;
+        }
     </style>
 
 {% endblock style %}
