--- a/templates/new_template/chat.html
+++ b/templates/new_template/chat.html
@@ -168,7 +168,7 @@
 {% block script %}
 <script src="/static/js/socket.io.js"></script>
 <script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChat.js"></script>
+<script src="/static/js/gptChatv0.0.1.js"></script>
 
 <script>
     socket.on('chatEnd', () => {
