--- a/templates/new_template/burnout.html
+++ b/templates/new_template/burnout.html
@@ -183,7 +183,7 @@ Medidor de BurnOut
 {% block script %}
 <script src="/static/js/socket.io.js"></script>
 <script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChat.js"></script>
+<script src="/static/js/gptChatv0.0.1.js"></script>
 
 <script>
     
