--- a/templates/new_template/english.html
+++ b/templates/new_template/english.html
@@ -222,7 +222,7 @@
 {% block script %}
 <script src="/static/js/socket.io.js"></script>
 <script src="/static/js/socket.config.js"></script>
-<script src="/static/js/gptChat.js"></script>
+<script src="/static/js/gptChatv0.0.1.js"></script>
 
 <script>
     
