--- a/templates/new_template/login.html
+++ b/templates/new_template/login.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourVoice | Login</title>
     <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="/static/css/toastify.min.css">
     <link rel="stylesheet" href="/static/css/login.css">
-
 </head>
 
 <body>
