toastify added to base and versiculo done

--- a/templates/new_template/change_password.html
+++ b/templates/new_template/change_password.html
@@ -35,7 +35,6 @@
       }
 
 </style>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
 {% endblock style %}
 {% block content %}
@@ -54,23 +53,9 @@
 </form>
 {% endblock content %}
 {% block script %}
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 <script>
-    function toast(text, color) {
-        Toastify({
-            text: text,
-            duration: 5000,
-            close: true,
-            gravity: "top",
-            position: "right",
-            stopOnFocus: true,
-            style: {
-                background: color
-            },
-            onClick: function () {} // Callback after click
-        }).showToast();
-    }
+    
 
 
     const save_btn = document.getElementById("save_btn"),
@@ -83,9 +68,9 @@
         })
         const response = await request.json();
         if(response['response'] === "success"){
-            toast(response['msg'], "#0e8843");
+            toast(response['msg'], "var(--success)");
         }else{
-            toast(response['msg'], "#9b0909");
+            toast(response['msg'], "var(--error)");
         }
 
     })
