--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -7,7 +7,12 @@
     <title>YourVoice | {% block title %}{% endblock title %}</title>
     <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/style.0.0.1.css">
+    <link rel="stylesheet" href="/static/css/toastify.min.css">
     <style>
+        :root{
+            --error:#9b0909;
+            --success:#0e8843;
+        }
         .profile-box{
             flex-wrap: wrap;
             justify-content: center;
@@ -27,6 +32,54 @@
             width: 20px;
             height: 20pxs;
         }
+        .loader-box{
+            display: block;
+            position: relative;
+            height: 4em;
+            width: 4em;
+            margin: 0 auto;
+        }
+        .loader {
+            color: #FFF;
+            position: absolute;
+            font-size: 11px;
+            background: #FFF;
+            animation: escaleY 1s infinite ease-in-out;
+            width: 1em;
+            height: 4em;
+            animation-delay: -0.16s;
+            display: block;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+          }
+          .loader:before,
+          .loader:after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 2em;
+            background: #FFF;
+            width: 1em;
+            height: 4em;
+            animation: escaleY 1s infinite ease-in-out;
+          }
+          .loader:before {
+            left: -2em;
+            animation-delay: -0.32s;
+          }
+          
+          @keyframes escaleY {
+            0%, 80%, 100% {
+              box-shadow: 0 0;
+              height: 4em;
+            }
+            40% {
+              box-shadow: 0 -2em;
+              height: 5em;
+            }
+          }
+          
     </style>
     {% block style %}{% endblock style %}
 </head>
@@ -169,6 +222,7 @@
         <button class="btn" onclick="cancel_logout()">Cancelar</button>
         <button class="btn success" onclick="logout()">Cerrar sesión</button>
     </dialog>
+    <script type="text/javascript" src="/static/js/toastify.min.js"></script>
     <script>
         function confirm_logout(){
             document.getElementById("dialog-logout").showModal();
@@ -187,6 +241,20 @@
                 method: "POST",
                 body:data
             })
+        }
+        function toast(text, color) {
+            Toastify({
+                text: text,
+                duration: 5000,
+                close: true,
+                gravity: "top",
+                position: "right",
+                stopOnFocus: true,
+                style: {
+                    background: color
+                },
+                onClick: function () {} // Callback after click
+            }).showToast();
         }
     </script>
     {% block script %}{% endblock script %}
