--- a/templates/new_template/index.html
+++ b/templates/new_template/index.html
@@ -372,9 +372,10 @@ Inicio
     function del_file(audio, index) {
         cancel_delete();
         fetch(`/del_file?filename=${audio}`).then(data => data.json()).then(() => {
-            document.getElementById('audio-' + index).remove()
+            document.getElementById('audio-' + index).remove();
+            toast("Audio eliminado con éxito", "var(--success)");
         }).catch(() => {
-            alert("No existe el archivo")
+            toast("No existe el archivo", "var(--error)");
         })
     }
 
@@ -402,8 +403,8 @@ Inicio
     async function save_audio_name(hyperlink){
         const main_anchor = hyperlink.previousElementSibling;
         const value =  main_anchor.firstElementChild.value;
-        const new_value = main_anchor.querySelector("input").value;
-        if (!await update_audio(value, new_value)){
+        const old_value = hyperlink.dataset.name;
+        if (!await update_audio(old_value, value)){
             return
         }
         const edit_img =  hyperlink.firstElementChild;
@@ -414,7 +415,7 @@ Inicio
         main_anchor.firstElementChild.remove();
         main_anchor.firstElementChild.innerText = value;
         main_anchor.firstElementChild.hidden = false;
-        main_anchor.setAttribute("href", `/player/${value}`);
+        main_anchor.setAttribute("href", `/player/${new_value}`);
         main_anchor.parentElement.classList.remove("focus")
     }
 
@@ -432,8 +433,16 @@ Inicio
             method:"POST"
         });
         const result = await response.json();
-        console.log(result)
-        return false
+        let color, success;
+        if (result.status === 200) {
+            color = "var(--success)";
+            success = true
+        }else{
+            color = "var(--error)";
+            success = false
+        }
+        toast(result['message'], color);
+        return success
     }
     
     
