--- a/templates/new_template/login.html
+++ b/templates/new_template/login.html
@@ -48,7 +48,7 @@
             </p>
         </form>
     </main>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script type="text/javascript" src="/static/js/toastify.min.js"></script>
     <script>
         const see_password = document.getElementById("see-password");
         const input_password = document.getElementById("password")
