cibersecurity, responsive design and refactor

--- a/templates/new_template/add_user.html
+++ b/templates/new_template/add_user.html
@@ -17,7 +17,7 @@
             justify-content: center;
             color: white;
             position: relative;
-            max-width: 100vw;
+            max-width: 90%;
             padding-bottom: 20px;
             width: 500px;
             background: #002424;
@@ -32,6 +32,9 @@
             button, label{
             margin: 0
             }
+        }
+        .btn{
+            color: white;
         }
 
     </style>
