--- a/static/css/login.css
+++ b/static/css/login.css
@@ -2,6 +2,10 @@
     max-width: 100%;
 }
 
+html, body, main{
+    height: 100%;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -15,7 +19,6 @@ body {
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    height: 100vh;
     max-width: 100vw;
 }
 
