--- a/templates/new_template/base.html
+++ b/templates/new_template/base.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/static/images/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="/static/css/style.0.0.1.css">
     <link rel="stylesheet" href="/static/css/toastify.min.css">
+    <link rel="stylesheet" href="/static/css/logo.css">
     <style>
         :root{
             --error:#9b0909;
@@ -30,78 +31,28 @@
         }
         .profile-icon img{
             width: 20px;
-            height: 20pxs;
+            height: 20px;
+        } 
+        .styled{
+            max-width: 80%;
         }
-        .loader-box{
-            display: block;
-            position: relative;
-            height: 4em;
-            width: 4em;
-            margin: 0 auto;
+        @media (max-width:480px) {
+            .profile-box{
+                gap: 10px;
+            }
+            header{
+                gap: 20px;
+                flex-direction: column;
+                align-items: center;
+            }
         }
-        .loader {
-            color: #FFF;
-            position: absolute;
-            font-size: 11px;
-            background: #FFF;
-            animation: escaleY 1s infinite ease-in-out;
-            width: 1em;
-            height: 4em;
-            animation-delay: -0.16s;
-            display: block;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%,-50%);
-          }
-          .loader:before,
-          .loader:after {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 2em;
-            background: #FFF;
-            width: 1em;
-            height: 4em;
-            animation: escaleY 1s infinite ease-in-out;
-          }
-          .loader:before {
-            left: -2em;
-            animation-delay: -0.32s;
-          }
-          
-          @keyframes escaleY {
-            0%, 80%, 100% {
-              box-shadow: 0 0;
-              height: 4em;
-            }
-            40% {
-              box-shadow: 0 -2em;
-              height: 5em;
-            }
-          }
-          
     </style>
     {% block style %}{% endblock style %}
 </head>
 <body>
     <main>
         <header>
-            <div class="logo-box">
-                <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_1_672)">
-                    <path d="M1.54004 5.06091V38.9391M17.5552 11.2206V32.7794M9.54761 15.8403V28.1597M41.5779 5.06091V38.9391M33.5703 11.2206V32.7794M25.5627 15.8403V28.1597" stroke="#00CF83" stroke-width="3.07983" stroke-linecap="round" stroke-linejoin="round"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0_1_672">
-                    <rect width="43.1177" height="43.1177" fill="white" transform="translate(0 0.441162)"/>
-                    </clipPath>
-                    </defs>
-                </svg> 
-                <div class="logo">
-                    <h1>YourVoice</h1>
-                    <h3>Una aplicación de Hutrit</h3>
-                </div>
-            </div>
+            {% include "components/logo.html" %}
             <div class="profile-box">
                 <span>{{session['user']}}</span>
                 <a href="/burnout" title="Medidor de burnout">
@@ -166,7 +117,7 @@
                     </svg>
                 </a>
                 <a href="/business" class="profile-icon" title="Softskill">
-                    <svg fill="#FFFF" width="27" height="28" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path d="M43.84,46.76a5.35,5.35,0,1,1,5.46-5.34A5.41,5.41,0,0,1,43.84,46.76Z" fill-rule="evenodd"/><path d="M77.33,55.7,70.06,44.9V44A24,24,0,0,0,46.19,20a22,22,0,0,0-5.67.7A23.89,23.89,0,0,0,22.31,44a21.92,21.92,0,0,0,3.58,12.7c4.18,6,7,10.8,5.27,17.3a4.58,4.58,0,0,0,.9,4.2A4.43,4.43,0,0,0,35.74,80h19.6A4.72,4.72,0,0,0,60,76.2a5,5,0,0,0,.2-1.2,2.37,2.37,0,0,1,2.39-2H64a4.72,4.72,0,0,0,4.68-3.4A41.31,41.31,0,0,0,70.16,60h5.17a2.78,2.78,0,0,0,2.19-1.6A2.86,2.86,0,0,0,77.33,55.7ZM57.49,47.33l-1,1.57a2.22,2.22,0,0,1-1.76.94,2.38,2.38,0,0,1-.72-.16l-2.65-1a11.64,11.64,0,0,1-3.85,2.2l-.48,2.91a2,2,0,0,1-2,1.65h-2a2,2,0,0,1-2-1.65l-.48-2.91a10,10,0,0,1-3.69-2l-2.81,1a2.38,2.38,0,0,1-.72.16,2.1,2.1,0,0,1-1.76-1l-1-1.65a1.94,1.94,0,0,1,.48-2.51l2.33-1.89a10.11,10.11,0,0,1-.24-2.12,9.41,9.41,0,0,1,.24-2L31.1,36.88a1.92,1.92,0,0,1-.48-2.51l1-1.65a2,2,0,0,1,1.76-1,2.38,2.38,0,0,1,.72.16l2.81,1a11.52,11.52,0,0,1,3.69-2.12L41,28a1.91,1.91,0,0,1,2-1.57h2a1.92,1.92,0,0,1,2,1.49l.48,2.83a11.31,11.31,0,0,1,3.69,2l2.81-1a2.38,2.38,0,0,1,.72-.16,2.1,2.1,0,0,1,1.76,1l1,1.65A2,2,0,0,1,57,36.8l-2.33,1.89a9.56,9.56,0,0,1,.24,2.12,9.41,9.41,0,0,1-.24,2L57,44.74A2,2,0,0,1,57.49,47.33Z" fill-rule="evenodd"/></svg>                </a>
+                    <svg fill="#FFFF" width="27" height="28" viewBox="10 20 90 90" xmlns="http://www.w3.org/2000/svg"><path d="M43.84,46.76a5.35,5.35,0,1,1,5.46-5.34A5.41,5.41,0,0,1,43.84,46.76Z" fill-rule="evenodd"/><path d="M77.33,55.7,70.06,44.9V44A24,24,0,0,0,46.19,20a22,22,0,0,0-5.67.7A23.89,23.89,0,0,0,22.31,44a21.92,21.92,0,0,0,3.58,12.7c4.18,6,7,10.8,5.27,17.3a4.58,4.58,0,0,0,.9,4.2A4.43,4.43,0,0,0,35.74,80h19.6A4.72,4.72,0,0,0,60,76.2a5,5,0,0,0,.2-1.2,2.37,2.37,0,0,1,2.39-2H64a4.72,4.72,0,0,0,4.68-3.4A41.31,41.31,0,0,0,70.16,60h5.17a2.78,2.78,0,0,0,2.19-1.6A2.86,2.86,0,0,0,77.33,55.7ZM57.49,47.33l-1,1.57a2.22,2.22,0,0,1-1.76.94,2.38,2.38,0,0,1-.72-.16l-2.65-1a11.64,11.64,0,0,1-3.85,2.2l-.48,2.91a2,2,0,0,1-2,1.65h-2a2,2,0,0,1-2-1.65l-.48-2.91a10,10,0,0,1-3.69-2l-2.81,1a2.38,2.38,0,0,1-.72.16,2.1,2.1,0,0,1-1.76-1l-1-1.65a1.94,1.94,0,0,1,.48-2.51l2.33-1.89a10.11,10.11,0,0,1-.24-2.12,9.41,9.41,0,0,1,.24-2L31.1,36.88a1.92,1.92,0,0,1-.48-2.51l1-1.65a2,2,0,0,1,1.76-1,2.38,2.38,0,0,1,.72.16l2.81,1a11.52,11.52,0,0,1,3.69-2.12L41,28a1.91,1.91,0,0,1,2-1.57h2a1.92,1.92,0,0,1,2,1.49l.48,2.83a11.31,11.31,0,0,1,3.69,2l2.81-1a2.38,2.38,0,0,1,.72-.16,2.1,2.1,0,0,1,1.76,1l1,1.65A2,2,0,0,1,57,36.8l-2.33,1.89a9.56,9.56,0,0,1,.24,2.12,9.41,9.41,0,0,1-.24,2L57,44.74A2,2,0,0,1,57.49,47.33Z" fill-rule="evenodd"/></svg>                </a>
                 <a href="/interview" class="profile-icon" title="Entrevista">
                     <svg width="25" height="25" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <mask id="mask0_38_897" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="16" height="17">
