--- a/templates/new_template/change_password.html
+++ b/templates/new_template/change_password.html
@@ -17,13 +17,16 @@
         justify-content: center;
         color: white;
         position: relative;
-        max-width: 100vw;
+        max-width: 90%;
         padding-bottom: 20px;
         width: 500px;
         background: #002424;
       }
     input{
         margin: 10px 0 20px 0;
+    }
+    .btn {
+        color: white;
     }
     @media (min-width:480px) and (max-width:700px) {
         input{
