--- a/templates/new_template/hutrit_interview.html
+++ b/templates/new_template/hutrit_interview.html
@@ -14,7 +14,7 @@
             justify-content: center;
             color: white;
             position: relative;
-            max-width: 100vw;
+            max-width: 90%;
             padding-bottom: 20px;
             width: 500px;
             background: #002424;
