--- a/templates/new_template/index.html
+++ b/templates/new_template/index.html
@@ -3,255 +3,13 @@
 Inicio
 {% endblock title %}
 {% block style %}
+<link rel="stylesheet" href="/static/css/index.css">
 <style>
-    .btn {
-        color: white;
-        display: inline-flex;
-        align-items: center;
-        margin: 0 10px;
-        font-size: 16px;
-        text-decoration: none;
+    body,html{
+        min-height: 100%;
     }
-
-    .btn img {
-        margin: 0 10px
-    }
-
-    .btn-box {
-        text-align: center;
-    }
-
-    .audio-item {
-        position: relative;
-        border-radius: 8px;
-        background: rgba(0, 28, 28, 0.50);
-        margin: 5px 0;
-        padding: 5px 10px;
-        display: grid;
-        gap: 10px;
-        grid-template-columns: 25px 1fr 25px 25px;
-    }
-
-    .card {
-        overflow-y: auto;
-        padding: 16px;
-        height: 400px;
-        position: relative;
-    }
-
-    .audio-txt {
-        width: auto;
-        padding: 0;
-        text-decoration: none;
-    }
-
-    .audio-txt:hover {
-        cursor: pointer;
-    }
-
-    .audio-name {
-        color: rgba(255, 255, 255, 0.75);
-        text-overflow: ellipsis;
-        font-size: 20px;
-        margin: 0;
-        text-align: left;
-    }
-
-    .audio-date {
-        color: rgba(255, 255, 255, 0.40);
-        font-size: 12px;
-        margin: 0;
-        text-align: left;
-    }
-
-    .ico-link {
-        height: 25px;
-    }
-
-    .empty p {
-        color: rgba(255, 255, 255, 0.75);
-        text-align: center;
-        font-size: 14px;
-    }
-
-    .empty {
-        width: 300px;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        position: absolute;
-    }
-
-    #drop_zone {
-        border: 1px dashed #ACE5C6;
-        background: rgba(172, 229, 198, 0.20);
-        width: 355px;
-        text-align: center;
-        padding: 16px;
-        margin: 0 auto 20px auto;
-        border-radius: 8px;
-        position: relative;
-    }
-    #drop_zone.error{
-        border-color: "#D34D4D";
-    }
-
-    .backup-lg {
-        width: 48px;
-        height: 48px;
-    }
-
-    .drop-formats {
-        color: #B5C9C9;
-        font-size: 14px;
-        margin: 5px 0 0 0;
-    }
-
-    .drop-txt {
-        color: #FAFAFA;
-        font-size: 18px;
-        margin: 5px 0 0 0;
-    }
-
-    .drop-a {
-        color: #00CF83
-    }
-
-    .drop-title {
-        font-size: 24px;
-        color: #FAFAFA;
-    }
-
-    dialog {
-        background: #001C1C;
-    }
-
-    dialog .btn {
-        color: #ACE5C6;
-    }
-
-    .drop-info-txt {
-        font-size: 14px;
-    }
-
-    .dropping {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: 1;
-        background-color: #001c1cd7;
-        display: none;
-    }
-
-    .dropping p {
-        margin: auto 0;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 26px;
-    }
-    #text-drop{
-        font-size: 12px;
-    }
-    progress{
-        height: 3px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        border: none;
-        background-color: transparent;
-        z-index: 1;
-        transform: translateY(50%);
-    }
-    .your-file{
-        position: relative;
-        width: 340px;
-        background-color: #004949;
-        border-radius: 4px;
-        border: 0.5px solid #B5C9C9;
-        font-size: 12px;
-        height: 26px;
-        padding: 10px 10px 0 10px;
-        text-align: left;
-        margin: 0 auto 10px auto;
-        display: none;
-    }
-    progress::-webkit-progress-value {
-        background-color: #00CF83;
-      }
-      
-    progress::-moz-progress-bar {
-        background-color: #00CF83;
-    }
-    progress::-webkit-progress-bar {
-        background-color: transparent;
-    }
-    .drop-audio-upload{
-        width: 350px;
-        position: relative;
-        padding: 15px 10px;
-        border-radius: 4px;
-        border: 1px solid #00CF83;
-        background: #004949; 
-        text-align: left;
-        margin: 0 auto;
-    }
-    .drop-audio-upload .trash{
-        position: absolute;
-        right: 5px;
-        top:50%;
-        transform: translateY(-50%);
-    }
-    .drop-audio-upload .trash img{
-        width: 20px;
-    }
-    .drop-audio-upload .audio{
-        margin-right: 5px;
-    }
-    #btn-repeat{
-        display: none;
-    }
-    .btn-box .btn{
-        width: 145px;
-        margin: 10px;
-    }
-
-    .circle{
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        display: block;
-        position: relative;
-        margin: 0 auto;
-    }
-    .circle svg{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    .warning{
-        background-color: #FFEEB2;
-    }
-</style>
-<style>
-    .filename{
-        width: 100%;
-        background: transparent;
-        border:#004949;
-        color: white;
-        font-size: 18px;
-    }
-    .filename:focus-visible{
-        outline: none;
-        border-bottom: double 3px #17af7767;
-    }
-    .focus{
-        border: 1px solid #00CF83;
+    #drop_zone, .drop-audio-upload, .your-file{
+        max-width: 80%;
     }
 </style>
 {% endblock style %}
