--- a/templates/new_template/recorder.html
+++ b/templates/new_template/recorder.html
@@ -108,7 +108,7 @@ Grabar
 <dialog>
     <div class="wrap">
 
-        <div id="filename-content" hidden>
+        <div id="filename-content" >
             <img src="/static/images/save.svg" alt="guardar">
             <h2>Guarda tu grabación</h2>
             <label for="filename">Nombre de la grabación</label>
@@ -119,7 +119,7 @@ Grabar
             </div>
         </div>
 
-        <div id="processing-content" >
+        <div id="processing-content" hidden>
             <div class="loader-box">
                 <span class="loader"></span>
             </div>
