front ux in transcript

--- a/static/css/style.0.0.2.css
+++ b/static/css/style.0.0.2.css
@@ -8,7 +8,7 @@ body,html{
 body{
     background: #001C1C; 
     color: white;
-    min-width: 100vw;
+    min-width: 100%;
     margin: 0;
     font-family: Mulish; 
 }
